[gd_scene load_steps=6 format=3 uid="uid://c2e2ehrd6605n"]

[ext_resource type="PackedScene" uid="uid://ck4gqrug1xqkh" path="res://Scenes/Bird.tscn" id="1_kln2b"]
[ext_resource type="Script" uid="uid://cy4oai1s0n170" path="res://Scripts/Main.gd" id="1_rgh2o"]
[ext_resource type="PackedScene" uid="uid://b826vnjx42r60" path="res://Scenes/PipePair.tscn" id="2_pbw6q"]

[sub_resource type="LabelSettings" id="LabelSettings_kln2b"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_rgh2o"]
font_size = 24

[node name="Main" type="Node2D"]
script = ExtResource("1_rgh2o")
pipe_scene = ExtResource("2_pbw6q")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_kln2b")]

[node name="Timer" type="Timer" parent="."]

[node name="PipeContainer" type="Node2D" parent="."]

[node name="GameOverUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverUI"]
offset_left = -16.0
offset_top = -13.0
offset_right = 1190.0
offset_bottom = 666.0
color = Color(0.00784314, 0.00784314, 0.00784314, 0.498039)

[node name="Label" type="Label" parent="GameOverUI"]
offset_left = 277.0
offset_top = 230.0
offset_right = 848.0
offset_bottom = 367.0
text = "Game Over!"
label_settings = SubResource("LabelSettings_kln2b")

[node name="Restart" type="Button" parent="GameOverUI"]
offset_left = 433.0
offset_top = 422.0
offset_right = 656.0
offset_bottom = 486.0
text = "Restart"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 481.0
offset_top = 2.0
offset_right = 572.0
offset_bottom = 36.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_rgh2o")

[connection signal="pressed" from="GameOverUI/Restart" to="." method="_on_restart_pressed"]
